# ot-harjoitustyo

./: .env  .gitignore  .test.env  README.md  pyproject.toml  tasks.py
dokumentaatio/: .tuntikirjanpito.md.swp  arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: _home_millakel__cache_pypoetry_virtualenvs_maksukortti-0ulXrrnd-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_millakel__cache_pypoetry_virtualenvs_maksukortti-0ulXrrnd-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_millakel__cache_pypoetry_virtualenvs_maksukortti-0ulXrrnd-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_millakel__cache_pypoetry_virtualenvs_maksukortti-0ulXrrnd-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  (+97 more)
laskarit/viikko2/poetry-testi/: pyproject.toml
python_familytree_app/: pyproject.toml
src/: database_connection.py  index.py  initialize_database.py
src/datacontrol/: recipes_database.py  users_database.py
src/functions/: cookbookapp_functions.py  user_functions.py
src/repositories/: user_repository.py
src/tests/datacontrol_tests/: recipes_database_test.py  users_database_test.py
src/tests/functions_tests/: cookbookapp_functions_test.py  users_functions_test.py
src/ui/: book_view.py  confirmation_view.py  login_view.py  modify_recipe_view.py  new_recipe_view.py  recipe_view.py  signin_view.py  ui.py  ui_view.py
(+3 files in other folders)
