[tool.poetry]
name = "python_familytree_app"
version = "0.1.0"
description = ""
authors = ["Milla Kelhu <milla.kelhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
