[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = "testi poetrylle"
authors = ["Milla Kelhu <milla.kelhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
